# turreta-rust-sftp-client-poc

./: .env  .gitignore  Cargo.toml  README.md
docker/: docker-compose.yml
dynamic-libraries/lib1/: Cargo.toml
dynamic-libraries/lib1/src/: lib.rs
src/: main.rs
src/common/: domain.rs  mod.rs  util.rs
src/domains/: alert.rs  mod.rs
src/repository/: database.rs  schema.rs
