[package]
name = "turreta-rust-sftp-client-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio_schedule = "0.3.1"
dotenv = "0.15.0"
ssh2 = "0.9.4"
actix-rt = "2.8.0"
cron = "0.12.0"
chrono = "0.4.26"
regex = "1.9.3"
serde = "1.0.160"
serde_derive = "1.0.160"